hackathon2: calendar
