# src/delivery.go
@@ -1,6 +1,7 @@
 package chat
 
 import (
+	"context"
 	"encoding/json"
 	"errors"
 	"io"
@@ -10,8 +11,13 @@ import (
 
 	e "main/domain/errors"
 	"main/domain/model"
+	m "main/domain/model"
 
 	"github.com/google/uuid"
+
+	"golang.org/x/oauth2/google"
+	"google.golang.org/api/calendar/v3"
+	"google.golang.org/api/option"
 )
 
 var chatFilesPath = "/chat"
@@ -147,4 +153,210 @@ func (api *Handler) UploadFile(w http.ResponseWriter, r *http.Request) {
 	}
 
 	json.NewEncoder(w).Encode(&model.UploadAttachResponse{File: "http://127.0.0.1:8080/" + fileName[1:]})
+}
+
+// SetOAUTH2Token godoc
+// @Summary Sets teacher's OAUTH2Token
+// @Description Sets teacher's OAUTH2Token
+// @ID SetOAUTH2Token
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} model.Response
+// @Failure 401 {object} model.Error "unauthorized - Access token is missing or invalid"
+// @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
+// @Router /oauth [post]
+func (api *Handler) SetOAUTH2Token(w http.ResponseWriter, r *http.Request) {
+	decoder := json.NewDecoder(r.Body)
+	var tok model.OAUTH2Token
+	if err := decoder.Decode(&tok); err != nil {
+		ReturnErrorJSON(w, e.ErrBadRequest400)
+		return
+	}
+	json.NewEncoder(w).Encode(&model.Response{})
+}
+
+// CreateCalendar godoc
+// @Summary Creates teacher's calendar
+// @Description Creates teacher's calendar
+// @ID CreateCalendar
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} model.CreateCalendarResponse
+// @Failure 401 {object} model.Error "unauthorized - Access token is missing or invalid"
+// @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
+// @Router /calendar [post]
+func (api *Handler) CreateCalendar(w http.ResponseWriter, r *http.Request) {
+	// decoder := json.NewDecoder(r.Body)
+	// var tok model.OAUTH2Token
+	// if err := decoder.Decode(&tok); err != nil {
+	// 	ReturnErrorJSON(w, e.ErrBadRequest400)
+	// 	return
+	// }
+	mockTeackerID := 1
+	// if _, err := api.store.GetTokenDB(mockTeackerID); err != nil {
+	// 	log.Println(err)
+	// 	ReturnErrorJSON(w, e.ErrUnauthorized401)
+	// 	return
+	// }
+
+	ctx := context.Background()
+	b, err := os.ReadFile("credentials.json")
+	if err != nil {
+		log.Println("Unable to read client secret file: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+		return
+	}
+
+	config, err := google.ConfigFromJSON(b, calendar.CalendarScope)
+	if err != nil {
+		log.Println("Unable to parse client secret file to config: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+	}
+
+	client, err := getClient(config)
+	if err != nil {
+		log.Println("Unable to get client from token: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+	}
+
+	srv, err := calendar.NewService(ctx, option.WithHTTPClient(client))
+	if err != nil {
+		log.Println("Unable to retrieve calendar Client: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+	}
+
+	newCal := &calendar.Calendar{TimeZone: "Europe/Moscow", Summary: "EDUCRM Calendar"}
+	cal, err := srv.Calendars.Insert(newCal).Do()
+	if err != nil {
+		log.Println("Unable to create calendar: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+	}
+	//fmt.Printf("Created Cal: %s\n", cal.Id)
+	innerID, err := api.store.CreateCalendarDB(mockTeackerID, cal.Id)
+	if err != nil {
+		log.Println("DB err: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+		return
+	}
+
+	Acl := &calendar.AclRule{Scope: &calendar.AclRuleScope{Type: "default"}, Role: "reader"}
+	_, err = srv.Acl.Insert(cal.Id, Acl).Do()
+	if err != nil {
+		log.Println("Unable to create ACL: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+		return
+	}
+	//fmt.Printf("Event created: %s\n", event.Id)
+
+	json.NewEncoder(w).Encode(&model.CreateCalendarResponse{ID: innerID, IDInGoogle: cal.Id})
+}
+
+// CreateCalendarEvent godoc
+// @Summary Creates teacher's calendar event
+// @Description Creates teacher's calendar event
+// @ID CreateCalendarEvent
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} model.Response
+// @Failure 401 {object} model.Error "unauthorized - Access token is missing or invalid"
+// @Failure 500 {object} model.Error "internal server error - Request is valid but operation failed at server side"
+// @Router /calendar/addevent [post]
+func (api *Handler) CreateCalendarEvent(w http.ResponseWriter, r *http.Request) {
+	if r.Method == http.MethodOptions {
+		return
+	}
+	mockTeackerID := 1
+
+	decoder := json.NewDecoder(r.Body)
+	var req model.CreateCalendarEvent
+	if err := decoder.Decode(&req); err != nil {
+		ReturnErrorJSON(w, e.ErrBadRequest400)
+		return
+	}
+
+	// if _, err := api.store.GetTokenDB(mockTeackerID); err != nil {
+	// 	ReturnErrorJSON(w, e.ErrUnauthorized401)
+	// 	return
+	// }
+
+	ctx := context.Background()
+	b, err := os.ReadFile("credentials.json")
+	if err != nil {
+		log.Println("Unable to read client secret file: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+		return
+	}
+
+	config, err := google.ConfigFromJSON(b, calendar.CalendarScope)
+	if err != nil {
+		log.Println("Unable to parse client secret file to config: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+	}
+
+	client, err := getClient(config)
+	if err != nil {
+		log.Println("Unable to get client from token: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+	}
+
+	srv, err := calendar.NewService(ctx, option.WithHTTPClient(client))
+	if err != nil {
+		log.Println("Unable to retrieve calendar Client: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+	}
+
+	event := &calendar.Event{
+		Summary:     req.Title,
+		Description: req.Description,
+		Start: &calendar.EventDateTime{
+			DateTime: req.StartDate,
+			TimeZone: "Europe/Moscow",
+		},
+		End: &calendar.EventDateTime{
+			DateTime: req.EndDate,
+			TimeZone: "Europe/Moscow",
+		},
+		Visibility: "public",
+	}
+	calendarID, err := api.store.GetCalendarGoogleID(mockTeackerID)
+	if err != nil {
+		log.Println("DB err: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+	}
+	log.Println(calendarID, req.StartDate, req.EndDate)
+	event, err = srv.Events.Insert(calendarID, event).Do()
+	if err != nil {
+		log.Println("Unable to create event: ", err)
+		ReturnErrorJSON(w, e.ErrServerError500)
+	}
+
+	MockClassID := 1
+	ids, err := api.store.GetChatsByClassID(MockClassID)
+	if err != nil {
+		log.Println(err)
+		return
+	}
+	log.Println(" Broadcast for event chats: ", ids)
+	for _, id := range *ids {
+		type1, err := api.store.GetTypeByChatID(id)
+		if err != nil {
+			log.Println("err with mes into chat ", id, " : ", err)
+			//return &proto.Nothing{}, err
+		}
+		switch type1 {
+		case "tg":
+			api.hub.MessagesToTGBot <- &m.MessageWebsocket{ChatID: int32(id), Text: "Новое событие!" + "\n" + req.Title + "\n" + req.Description + "\n" + "Начало: " + req.StartDate + "\n" + "Окончание: " + req.EndDate, AttachmentURLs: []string{}}
+		case "vk":
+			api.hub.MessagesToVKBot <- &m.MessageWebsocket{ChatID: int32(id), Text: "Новое событие!" + "\n" + req.Title + "\n" + req.Description + "\n" + "Начало: " + req.StartDate + "\n" + "Окончание: " + req.EndDate, AttachmentURLs: []string{}}
+		default:
+		}
+		// err = sm.store.AddMessage(&m.CreateMessage{Text: req.Title + "\n" + req.Description, ChatID: id, IsAuthorTeacher: true, IsRead: false, AttachmentURLs: req.AttachmentURLs})
+		// if err != nil {
+		// 	log.Println("err with mes into chat ", id, " : ", err)
+		// 	//return err
+		// }
+
+	}
+
+	json.NewEncoder(w).Encode(&model.Response{})
 }
